@@ -1,5 +1,9 @@
 version <unreleased>
 
+Core
+* [__init__] Metadata are now added after conversion (#5594)
+
+
 Extractors
 * [openload] Fix extraction (#10408, #12357)
 
